--- a/UserManagementSystem/src/main/resources/application.properties
+++ b/UserManagementSystem/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/usermanagementsystem
+spring.datasource.username=root
+spring.datasource.password=manager
+spring.datasource.driver-class=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
